# acc_coach_ai

./: ACCCoachLauncher.spec  Base  README.it.md  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt
acc_coach_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/simulations/: sample_lap.jsonl
frontend/dashboard/: requirements.txt  streamlit_app.py
frontend/overlay/: index.html  overlay.js  styles.css
infrastructure/: docker-compose.yml
launcher/: app.py
scripts/: playback_simulation.py
services/analytics/: database.py  engine.py  main.py  models.py  repository.py  requirements.txt
services/coach_ai/: coaching_engine.py  main.py  requirements.txt  schemas.py  tts.py
services/telemetry/: collector.py  main.py  requirements.txt
shared/schemas/: feedback.py  session.py  telemetry.py
shared/utils/: config.py  logging.py  message_bus.py
tools/: build_launcher.ps1
