[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acc-coach-ai"
version = "0.1.0"
description = "Virtual coach per Assetto Corsa Competizione"
authors = [{ name = "ACC Coach AI" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.6.4",
    "pydantic-settings==2.3.1",
    "sqlalchemy==2.0.29",
    "aiosqlite==0.19.0",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pandas==2.2.1",
    "redis==5.0.3",
    "python-dateutil==2.9.0",
    "aiofiles==23.2.1",
    "PySide6==6.7.0",
    "google-generativeai==0.7.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "shared*"]
